--- a/storyTeller/proj.win32/storyTeller.vcxproj
+++ b/storyTeller/proj.win32/storyTeller.vcxproj
@@ -145,10 +145,32 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\Common\Animator\ssplayer_effect.cpp" />
+    <ClCompile Include="..\Classes\Common\Animator\ssplayer_effectfunction.cpp" />
+    <ClCompile Include="..\Classes\Common\Animator\ssplayer_matrix.cpp" />
+    <ClCompile Include="..\Classes\Common\Animator\ssplayer_PartState.cpp" />
+    <ClCompile Include="..\Classes\Common\Helper\DebugPrint.cpp" />
+    <ClCompile Include="..\Classes\SS5Player.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\Common\Animator\MersenneTwister.h" />
+    <ClInclude Include="..\Classes\Common\Animator\ssplayer_cellmap.h" />
+    <ClInclude Include="..\Classes\Common\Animator\ssplayer_effect.h" />
+    <ClInclude Include="..\Classes\Common\Animator\ssplayer_effectfunction.h" />
+    <ClInclude Include="..\Classes\Common\Animator\ssplayer_macro.h" />
+    <ClInclude Include="..\Classes\Common\Animator\ssplayer_matrix.h" />
+    <ClInclude Include="..\Classes\Common\Animator\ssplayer_PartState.h" />
+    <ClInclude Include="..\Classes\Common\Helper\DebugPrint.h" />
+    <ClInclude Include="..\Classes\Common\Loader\SsEffectBehavior.h" />
+    <ClInclude Include="..\Classes\Common\Loader\SsEffectElement.h" />
+    <ClInclude Include="..\Classes\Common\Loader\ssloader.h" />
+    <ClInclude Include="..\Classes\Common\Loader\ssloader_ssee.h" />
+    <ClInclude Include="..\Classes\Common\Loader\sstypes.h" />
+    <ClInclude Include="..\Classes\SS5Player.h" />
+    <ClInclude Include="..\Classes\SS5PlayerData.h" />
+    <ClInclude Include="..\Classes\ssShader_frag.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
